--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install -r requirements.txt
         
     - name: Get changed files
       id: changed-files
