--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -70,6 +70,7 @@ jobs:
           echo "${{ steps.review.outputs.review_content }}"
         else
           echo "No review was generated."
+          echo "${{ steps.review.outputs.review_content }}"
         fi
         echo ""
         echo "=============================="
