--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -40,6 +40,7 @@ jobs:
           **/*.rs
           **/*.rb
           **/*.php
+          **/*.yml
         files_ignore: |
           **/*.test.*
           **/*.spec.*
