--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -2,18 +2,18 @@ name: Code Review with LLM
 
 on:
   pull_request:
-    branches: [ main ]
+    types: [opened, synchronize, reopened]
+    branches: [ main, master, develop ]
 
 jobs:
   code-review:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout repository with full history
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.ref }}
     
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -23,37 +23,31 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v44
-      with:
-        files: |
-          **/*.py
-          **/*.js
-          **/*.ts
-          **/*.java
-          **/*.cpp
-          **/*.c
-          **/*.go
-          **/*.rs
-          **/*.rb
-          **/*.php
-          **/*.yml
-        files_ignore: |
-          **/*.test.*
-          **/*.spec.*
-          **/test/**
-          **/tests/**
-          **/__tests__/**
+        pip install requests
+    
+    - name: Debug - List all changed files
+      run: |
+        echo "📋 Listing all changed files..."
+        git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} || true
+        echo ""
+        echo "📊 File count:"
+        git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | wc -l || true
+    
+    - name: Debug - Check file types
+      run: |
+        echo "🔍 Checking file extensions..."
+        git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | while read file; do
+          if [ -n "$file" ]; then
+            extension="${file##*.}"
+            echo "$file -> .$extension"
+          fi
+        done || true
     
     - name: Generate code review
       id: review
-      if: steps.changed-files.outputs.any_changed == 'true'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        LLM_API_URL: ${{ secrets.LLM_API_URL}}
+        LLM_API_URL: ${{ secrets.LLM_API_URL || 'http://127.0.0.1:8000/api/review/' }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
         BASE_SHA: ${{ github.event.pull_request.base.sha }}
         HEAD_SHA: ${{ github.event.pull_request.head.sha }}
@@ -61,58 +55,73 @@ jobs:
         echo "📊 Starting code review process..."
         echo "🔗 API URL: ${LLM_API_URL}"
         python .github/scripts/code_review.py
-
+    
     - name: Print review results
       if: always()
       run: |
+        echo ""
         echo "📋 ====== REVIEW RESULTS ======"
         echo ""
         if [[ "${{ steps.review.outputs.has_review }}" == "true" ]]; then
-          echo "${{ steps.review }}"
+          # Decode the escaped content
+          echo "${{ steps.review.outputs.review_content }}" | sed 's/%0A/\n/g' | sed 's/%0D/\r/g'
         else
           echo "No review was generated."
-          echo "${{ steps.review.outputs.review_content }}"
+          echo "Review output: ${{ steps.review.outputs.review_content }}"
         fi
         echo ""
         echo "=============================="
-        
+    
     # - name: Post review as comment
-    #   if: steps.changed-files.outputs.any_changed == 'true' && steps.review.outputs.has_review == 'true'
+    #   if: steps.review.outputs.has_review == 'true'
     #   uses: actions/github-script@v6
     #   with:
     #     script: |
-    #       const reviewContent = `## 🤖 AI Code Review\n\n${process.env.REVIEW_RESULT}`;
+    #       // Decode the review content
+    #       const reviewContent = `## 🤖 AI Code Review\n\n${{ steps.review.outputs.review_content }}`;
           
-    #       // Xóa comment cũ nếu có
-    #       const { data: comments } = await github.rest.issues.listComments({
-    #         owner: context.repo.owner,
-    #         repo: context.repo.repo,
-    #         issue_number: ${{ github.event.pull_request.number }}
-    #       });
+    #       console.log("Posting review comment...");
+    #       console.log("Review length:", reviewContent.length);
           
-    #       const botComments = comments.filter(comment => 
-    #         comment.body.includes('🤖 AI Code Review') || 
-    #         comment.user.login === 'github-actions[bot]'
-    #       );
-          
-    #       for (const comment of botComments) {
-    #         await github.rest.issues.deleteComment({
+    #       try {
+    #         // Xóa comment cũ nếu có (của bot)
+    #         const { data: comments } = await github.rest.issues.listComments({
     #           owner: context.repo.owner,
     #           repo: context.repo.repo,
-    #           comment_id: comment.id
+    #           issue_number: context.issue.number
     #         });
+            
+    #         const botComments = comments.filter(comment => 
+    #           comment.body.includes('🤖 AI Code Review') || 
+    #           comment.user.login === 'github-actions[bot]'
+    #         );
+            
+    #         console.log(`Found ${botComments.length} old bot comments to delete`);
+            
+    #         for (const comment of botComments) {
+    #           try {
+    #             await github.rest.issues.deleteComment({
+    #               owner: context.repo.owner,
+    #               repo: context.repo.repo,
+    #               comment_id: comment.id
+    #             });
+    #             console.log(`Deleted comment ${comment.id}`);
+    #           } catch (error) {
+    #             console.log(`Error deleting comment ${comment.id}:`, error.message);
+    #           }
+    #         }
+            
+    #         // Tạo comment mới
+    #         const newComment = await github.rest.issues.createComment({
+    #           owner: context.repo.owner,
+    #           repo: context.repo.repo,
+    #           issue_number: context.issue.number,
+    #           body: reviewContent
+    #         });
+            
+    #         console.log(`✅ Posted new comment with ID: ${newComment.data.id}`);
+            
+    #       } catch (error) {
+    #         console.error("❌ Error posting comment:", error);
+    #         throw error;
     #       }
-          
-    #       // Tạo comment mới
-    #       await github.rest.issues.createComment({
-    #         owner: context.repo.owner,
-    #         repo: context.repo.repo,
-    #         issue_number: ${{ github.event.pull_request.number }},
-    #         body: reviewContent
-    #       });
-    #   env:
-    #     REVIEW_RESULT: ${{ steps.review.outputs.review_content }}
-    
-    # - name: Skip if no code files changed
-    #   if: steps.changed-files.outputs.any_changed == 'false'
-    #   run: echo "No code files changed. Skipping code review."
