--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,50 +1,23 @@
-# Build stage
-FROM python:3.10-slim as builder
-
-WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
-
-# Runtime stage
 FROM python:3.10-slim
 
 WORKDIR /app
 
-# Install system dependencies for runtime
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# Cài curl cho health check
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# Copy Python dependencies from builder
-COPY --from=builder /root/.local /root/.local
+# Copy requirements và cài đặt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Ensure scripts in .local are usable
-ENV PATH=/root/.local/bin:$PATH
-
-# Copy application code
+# Copy toàn bộ code
 COPY . .
 
-# Create non-root user
-RUN useradd -m -u 1000 fastapi && \
-    chown -R fastapi:fastapi /app
-
-USER fastapi
-
 # Expose port
-EXPOSE 8000
+EXPOSE 8080
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+    CMD curl -f http://localhost:8080/health || exit 1
 
-# Run the application
+# Run application
 CMD ["python", "run.py"]
